--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,13 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
+.blurSidebar3 {
+    background: rgba(255, 255, 255, 0.7);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(6px);
+    border-radius: 10px;
+}
+
 ul.slick-dots {
     bottom: -50px;
 }
@@ -96,4 +103,21 @@ ul.slick-dots {
 
 .transition-opacity.transition-opacity-enter {
     opacity: 1;
+}
+
+
+
+.sidebar-container input:checked~header .burger>label>div:nth-child(1) {
+    transform: rotate(45deg);
+    top: 50%;
+}
+
+.sidebar-container input:checked~header .burger>label>div:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 50%;
+}
+
+.sidebar-container input:checked~header .burger>label>div:nth-child(2) {
+    transform: scale(0);
+    opacity: 0;
 }
